// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands eject ejects 1`] = `
Array [
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "- key: home
  title: ホーム
- key: about
  title: 約
- key: news
  title: ニュース
",
    "fileName": "test/data/test-content/menu.ja.yaml",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "intro: このサブフォルダへようこそ
description: これは翻訳されない説明です
items:
  - key: test
    title: テスト中
  - key: hello
    title: ハローワーク
",
    "fileName": "test/data/test-content/sub/welcome.ja.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
  Object {
    "content": "title: 題名
description: これは説明です
new: いくつかの新しいキー
body: |
  ##これはいくつかの値下げです

  これはどのように？
",
    "fileName": "test/data/test-content/ui.global.ja.yaml",
  },
]
`;

exports[`commands eject ejects 2`] = `
Array [
  Object {
    "content": "# updated here
ui.global/footer: |
  Footer here
# English Here...
menu/hello: |
  This is a translated key
# original title here
sub/welcome/items__test__title: |
  This is the title!
",
    "fileName": "test/data/test-content/_i18n/ja.yaml",
  },
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "home:
  title: ホーム
about:
  title: 約
news:
  title: ニュース
",
    "fileName": "test/data/test-content/menu.ja.yaml",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "intro: このサブフォルダへようこそ
description: これは翻訳されない説明です
items:
  test:
    title: |
      This is the title!
  hello:
    title: ハローワーク
",
    "fileName": "test/data/test-content/sub/welcome.ja.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
  Object {
    "content": "title: 題名
description: これは説明です
new: いくつかの新しいキー
body: |
  ##これはいくつかの値下げです

  これはどのように？
",
    "fileName": "test/data/test-content/ui.global.ja.yaml",
  },
]
`;

exports[`commands export exports 1`] = `
Array [
  Object {
    "content": "dHash,Location,Key,Default Language,Existing Translation,Updated Translation (or leave blank)
OnhpU4izi1,menu.ja.yaml,[0:home]__title,Home,ホーム,
Tvyg0Qxf64,menu.ja.yaml,[1:about]__title,About,約,
aXUvIxOy8B,menu.ja.yaml,[2:news]__title,News,ニュース,
O7zuwuv2p5,sub/welcome.ja.yaml,intro,Welcome to this sub folder,このサブフォルダへようこそ,
luDxWK7tmC,sub/welcome.ja.yaml,description,This is a description that won't be translated,これは翻訳されない説明です,
6Aaikc/D5h,sub/welcome.ja.yaml,items__[0:test]__title,Testing,テスト中,
UJJQgXm1Ai,sub/welcome.ja.yaml,items__[1:hello]__title,Hello Work,ハローワーク,
fozSBW2nOn,ui.global.ja.yaml,title,Title,題名,
DdECGc15NC,ui.global.ja.yaml,description,This is a description,これは説明です,
V7FjiOgcRD,ui.global.ja.yaml,new,Some new key,いくつかの新しいキー,
zcRMuPQjiV,ui.global.ja.yaml,body,\\"## This is some markdown

How is this?
\\",\\"##これはいくつかの値下げです

これはどのように？
\\",
",
    "fileName": "test/data/test-csv/ja.csv",
  },
]
`;

exports[`commands generate exports 1`] = `
Array [
  Object {
    "content": "
# Home
menu/home__title: |-
  ホーム

# About
menu/about__title: |-
  約

# News
menu/news__title: |-
  ニュース

# Welcome to this sub folder
sub/welcome/intro: |-
  このサブフォルダへようこそ

# This is a description that won't be translated
sub/welcome/description: |-
  これは翻訳されない説明です

# Testing
sub/welcome/items__test__title: |
  This is the title!

# Hello Work
sub/welcome/items__hello__title: |-
  ハローワーク

# Title
ui.global/title: |-
  題名

# This is a description
ui.global/description: |-
  これは説明です

# Some new key
ui.global/new: |-
  いくつかの新しいキー

# ## This is some markdown
# 
# How is this?
ui.global/body: |
  ##これはいくつかの値下げです

  これはどのように？
",
    "fileName": "test/data/test-content/_i18n/ja.yaml",
  },
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
]
`;

exports[`commands import imports 1`] = `
Array [
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "\\"[0:home].title\\": Test update
",
    "fileName": "test/data/test-content/menu.ja.yaml",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
  Object {
    "content": "body: |-
  ## Multi Line

  Test
",
    "fileName": "test/data/test-content/ui.global.ja.yaml",
  },
]
`;

exports[`commands import merges correctly 1`] = `
Array [
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "\\"[0:home].title\\": Test update
",
    "fileName": "test/data/test-content/menu.ja.yaml",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
  Object {
    "content": "body: |-
  ## Multi Line

  Test
",
    "fileName": "test/data/test-content/ui.global.ja.yaml",
  },
]
`;
